Fix buttons width on firefox

--- a/src/subtitulamos/resources/assets/css/app.css
+++ b/src/subtitulamos/resources/assets/css/app.css
@@ -110,7 +110,7 @@ body {
 
 button {
   cursor: pointer;
-  width: fit-content;
+  width: max-content;
 }
 
 button,
